@@ -1,6 +1,8 @@
 === HEAD
 
-* Handle sets of alter_table operations on mysql and mssql where later operations depend on earlier ones (jeremyevans)
+* Combine multiple alter_table operations into a single query where possible on MySQL and PostgreSQL (jeremyevans)
+
+* Handle sets of alter_table operations on MySQL and MSSQL where later operations depend on earlier ones (jeremyevans)
 
 * Add constraint_validations plugin for automatic validations of constaints defined by extension (jeremyevans)
 
